--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Github Profiles",
+  "name": "github-profiles",
   "version": "1.0.0",
   "description": "Project to practice React",
   "main": "server.js",
